add register user

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-PSQL_HOST=localhost
-PSQL_PORT=5432
-PSQL_USER=postgres
-PSQL_PWD=mysecretpassword
-PSQL_DB=asset_findr
+MYSQL_HOST=localhost
+MYSQL_PORT=5432
+MYSQL_USER=postgres
+MYSQL_PWD=mysecretpassword
+MYSQL_DB=asset_findr
 
 APP_PORT=8081
