--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     container_name: mysql-edot
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_USER: edot
-      MYSQL_PASSWORD: edot123
-      MYSQL_DATABASE: test-edot
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PWD}
+      MYSQL_DATABASE: ${MYSQL_DB}
     ports:
       - "3306:3306"  # Expose port MySQL
     volumes:
@@ -22,13 +22,14 @@ services:
 #    networks:
 #      - mysql_network
 
-  api:
+  run-api:
     build:
       dockerfile: api.Dockerfile
     depends_on:
       mysql:
         condition: service_healthy
     container_name: test-edot-api
+    restart: on-failure
     ports:
       - "8081:8081"
     env_file:
