--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,17 @@ services:
     env_file:
       - .env
 
+  run-scheduler:
+    build:
+      dockerfile: scheduler.Dockerfile
+    depends_on:
+      mysql:
+        condition: service_healthy
+    container_name: test-edot-scheduler
+    restart: on-failure
+    env_file:
+      - .env
+
 volumes:
   db_data:
     driver: local
